--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "d3": "^7.9.0",
     "lenis": "^1.1.20",
     "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-organizational-chart": "^2.2.1",
     "react-router-dom": "^7.1.5",
     "remixicon": "^4.6.0"
   },
